--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -29,6 +29,7 @@
         "mhutchie.git-graph",
         "fill-labs.dependi",
         "ms-python.autopep8",
+        "mechatroner.rainbow-csv",
         "GitHub.vscode-pull-request-github",
         "aaron-bond.better-comments",
         "usernamehw.errorlens"
