--- a/requirements.txt
+++ b/requirements.txt
@@ -51,6 +51,7 @@ threadpoolctl==3.5.0
 typing_extensions==4.12.2
 tzdata==2024.2
 urllib3==2.3.0
+uuid==1.30
 Werkzeug==3.1.3
 wheel==0.45.1
 wrapt==1.17.2
